crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var A;
(function(A1) {
    var B1;
    (function(B) {
        var C = function C() {
            "use strict";
            _classCallCheck(this, C);
        };
        B.C = C;
    })(B1 || (B1 = {
    }));
    A1.B = B1;
})(A || (A = {
}));
var M2;
(function(M21) {
    var X1;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X1 || (X1 = {
    }));
    M21.X = X1;
})(M2 || (M2 = {
}));
